'FruitSpawner' nao irá gerar 'SimpleFruit'